	- add Chibi Tracker fingerprint to IT loader (info by Storlek)
	- add Schism Tracker fingerprint to S3M loader (info by Storlek)
	- fix Modplug Tracker/OpenMPT identification in IT loader
	- IT instrument and sample modes use same quirks (Storlek test #9)
	- transposed period scale base down one semitone (Storlek test #1)
	- remove previous portamento in SpaceDebris.mod fix

2.6.0 (20090625):
	- cleanup: remove rarely used Unix IPC code that difficults porting
	- cleanup: remove per-module configuration that nobody uses
	- cleanup: moved Prowizard depacking to loader section
	- don't abort loading if IT sample magic not found (fixes loading
	  of use-brdg.it and use-funk.it, reported by Mirko Buffoni)
	- multichannel mods written with Scream Tracker don't use Amiga note
	  limits (fixes Earth Mountains, reported by Samuli Sorvakko)
	- fix start option in DeusEx's .umx files (by erlk ozlr)
	- add OpenBSD sndio driver (by Thomas Pfaff)
	- fix memory leak: free extra pattern allocated by the XM loader
	- fix memory leak: free temporary pointer arrays in the IT loader
	- fix memory leak: free temporary pointer arrays in the S3M loader
	- fix memory leak: free header and filename when file is invalid
	- fix memory leak: free temporary buffer in MDL loader
	- fix memory leak: move UNIC check to test section of mod loader
	- fix memory leak: free Digital Symphony extra empty track
	- fix memory leak: free Music Module Compressor buffers
	- fix memory access violation freeing list nodes using list_for_each
	- fix memory access violation in MDL track allocation
	- fix memory access violation in MDL sample decompression
	- fix memory access violation in LIQ pattern loading
	- fix memory access violation in P18A format test
	- fix free of unallocated block in IT sample-only mode
	- fix buffer overflow in OXM/DTT loaders (reported by Luigi Auriemma)
	- rename oss_mix driver to oss and alsa_mix to alsa
	- restrict MMD0/MMD1 non-synth instrument note range to 3 octaves