@@ -951,6 +951,8 @@ static int it_load(struct xmp_context *ctx, FILE *f, const int start)
     /*m->fetch |= ifh.flags & IT_USE_INST ? XMP_MODE_IT : XMP_MODE_ST3;*/
     m->fetch |= XMP_MODE_IT;
     m->fetch |= XMP_CTL_VIRTUAL | XMP_CTL_FILTER;
+    if (~ifh.flags & IT_LINK_GXX)
+	m->fetch |= XMP_CTL_UNISLD;
 
     reportv(ctx, 0, "\n");
 
